plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.netflix.dgs.codegen' version '7.0.3'
    id 'jacoco'
}
ext {
    springAiVersion = "1.0.0"
}

group = 'com.til.light_iot_cloud'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/snapshot' }
}

configurations.configureEach {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
}

/*tasks.named('bootRun') {
    jvmArgs = [
            '-Djdk.attach.allowAttachSelf=true',
            '--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED'
    ]
}*/


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // 测试依赖
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.junit.platform:junit-platform-suite'
    testImplementation 'org.junit.platform:junit-platform-suite-api'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.ai:spring-ai-starter-mcp-server'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
    //implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webflux'


    implementation 'name.nkonev.multipart-spring-graphql:multipart-spring-graphql:1.6.0'

    compileOnly 'org.jetbrains:annotations:24.0.0'

    //implementation 'net.bytebuddy:byte-buddy-agent:1.17.5'
    //implementation 'net.bytebuddy:byte-buddy:1.17.5'
    //implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:12.0.0'
    //implementation 'org.apache.ftpserver:ftpserver-core:1.2.0'
    implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'
    implementation 'io.netty:netty-all:4.1.109.Final'
    implementation "com.auth0:java-jwt:4.4.0"
    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.12'
    implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.12'
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    implementation 'net.coobird:thumbnailator:0.4.20'


}

generateJava {
    schemaPaths = ["${projectDir}/src/main/resources/graphql-client"]
    packageName = 'com.til.light_iot_cloud.lightiotcloud.codegen'
    generateClient = true
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    include '**/BaseTest.class'
}